--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "raw-body": "^2.5.2",
     "readable-stream": "^3.6.2",
     "readdirp": "^3.6.0",
+    "redis": "^5.6.1",
     "retry-as-promised": "^7.1.1",
     "rimraf": "^3.0.2",
     "safe-buffer": "^5.2.1",
@@ -180,8 +181,8 @@
     "sparse-bitfield": "^3.0.3",
     "sqlstring": "^2.3.3",
     "statuses": "^2.0.1",
-    "string-width": "^4.2.3",
     "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
     "supports-color": "^5.5.0",
     "tar": "^6.2.1",
@@ -206,6 +207,5 @@
     "wkx": "^0.5.0",
     "wrappy": "^1.0.2",
     "yallist": "^4.0.0"
-  },
-  "devDependencies": {}
+  }
 }
